Added route / handler for jmf recommendations AI
